--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -24,6 +24,7 @@
             android:textSize="32sp"/>
 
         <Button
+            android:id="@+id/endurance"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
