--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -4,8 +4,8 @@
 
     <translate
         android:duration="1000"
-        android:fromYDelta="100%p"
-        android:toYDelta="0%p"
+        android:fromXDelta="100%p"
+        android:toXDelta="0%p"
         android:interpolator="@android:anim/bounce_interpolator"
         />
 
