--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -44,7 +44,7 @@
         android:layout_weight="33">
 
         <Button
-            android:id="@+id/profil"
+            android:id="@+id/reflexe"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -52,7 +52,7 @@
             android:layout_centerVertical="true"
             android:background="#228b22"
             android:textColor="#ffd700"
-            android:text="@string/profil"
+            android:text="@string/reflexe"
             android:textSize="32sp" />
 
         <Button
