--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -56,6 +56,7 @@
             android:textSize="32sp" />
 
         <Button
+            android:id="@+id/aventure"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -63,7 +64,7 @@
             android:layout_centerVertical="true"
             android:background="#ffd700"
             android:textColor="#228b22"
-            android:text="@string/jouer"
+            android:text="@string/aventure"
             android:textSize="32sp"/>
 
     </LinearLayout>
@@ -75,6 +76,7 @@
         android:layout_weight="33">
 
         <Button
+            android:id="@+id/puissance"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -82,7 +84,7 @@
             android:layout_centerVertical="true"
             android:background="#ffd700"
             android:textColor="#228b22"
-            android:text="@string/jouer"
+            android:text="@string/puissance"
             android:textSize="32sp" />
 
         <Button
