mode profil terminé, nouveau theme avec titlebar hidden et mode fullscreen

--- a/app/src/main/res/layout/activity_resultat_partie.xml
+++ b/app/src/main/res/layout/activity_resultat_partie.xml
@@ -88,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:text="Quitter"
+            android:text="Menu"
             android:layout_gravity="center"
             android:gravity="center"
             android:textSize="20sp"/>
