--- a/app/src/main/res/anim/vertical_fade_in.xml
+++ b/app/src/main/res/anim/vertical_fade_in.xml
@@ -4,8 +4,8 @@
 
     <translate
         android:duration="500"
-        android:fromXDelta="-100%p"
-        android:toXDelta="0%p"
+        android:fromYDelta="100%p"
+        android:toYDelta="0%p"
         android:interpolator="@android:anim/bounce_interpolator"
         />
 
