--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -24,26 +24,6 @@
             android:textSize="32sp"/>
 
         <Button
-            android:id="@+id/endurance"
-            android:layout_weight="50"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="#228b22"
-            android:textColor="#ffd700"
-            android:text="@string/endurance"
-            android:textSize="32sp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_weight="33">
-
-        <Button
             android:id="@+id/reflexe"
             android:layout_weight="50"
             android:layout_width="match_parent"
@@ -53,18 +33,6 @@
             android:background="#228b22"
             android:textColor="#ffd700"
             android:text="@string/reflexe"
-            android:textSize="32sp" />
-
-        <Button
-            android:id="@+id/aventure"
-            android:layout_weight="50"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="#ffd700"
-            android:textColor="#228b22"
-            android:text="@string/aventure"
             android:textSize="32sp"/>
 
     </LinearLayout>
@@ -74,6 +42,18 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_weight="33">
+
+        <Button
+            android:id="@+id/endurance"
+            android:layout_weight="50"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="#228b22"
+            android:textColor="#ffd700"
+            android:text="@string/endurance"
+            android:textSize="32sp" />
 
         <Button
             android:id="@+id/puissance"
@@ -85,9 +65,30 @@
             android:background="#ffd700"
             android:textColor="#228b22"
             android:text="@string/puissance"
+            android:textSize="32sp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_weight="33">
+
+        <Button
+            android:id="@+id/options"
+            android:layout_weight="50"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="#ffd700"
+            android:textColor="#228b22"
+            android:text="@string/options"
             android:textSize="32sp" />
 
         <Button
+            android:id="@+id/profil"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
