--- a/app/src/main/res/layout/activity_mode_sprint.xml
+++ b/app/src/main/res/layout/activity_mode_sprint.xml
@@ -6,7 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="zm.shakethatphone.ModeSprint">
+    tools:context="zm.shakethatphone.ModeSprint"
+    android:background="@drawable/gradient_background">
 
     <TextView
         android:id="@+id/view_current_score"
@@ -15,7 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:textSize="48sp"
+        android:textColor="#228b22"
+        android:textSize="62sp"
         />
 
 </RelativeLayout>
