--- a/app/src/main/res/layout/activity_mode_sprint.xml
+++ b/app/src/main/res/layout/activity_mode_sprint.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="zm.shakethatphone.ModeSprint"
+    tools:context="zm.shakethatphone.ModesDeJeu.ModeSprint"
     android:background="@drawable/gradient_background">
 
     <TextView
