--- a/app/src/main/res/menu/mode_sprint.xml
+++ b/app/src/main/res/menu/mode_sprint.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="zm.shakethatphone.ModeSprint" >
+    tools:context="zm.shakethatphone.ModesDeJeu.ModeSprint" >
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
