--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -88,7 +88,7 @@
             android:textSize="32sp" />
 
         <Button
-            android:id="@+id/aPropos"
+            android:id="@+id/contacter"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -96,7 +96,7 @@
             android:layout_centerVertical="true"
             android:background="#ffd700"
             android:textColor="#228b22"
-            android:text="@string/a_propos"
+            android:text="@string/contacter"
             android:textSize="32sp" />
 
     </LinearLayout>
