--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -150,5 +150,35 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="20"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/reinitialiser"
+            android:text="@string/reinitialiser"
+            android:layout_weight="50"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="26sp"
+            android:background="#ffd700"
+            android:textColor="#228b22"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/partager"
+            android:text="@string/partager"
+            android:layout_weight="50"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="26sp"
+            android:textColor="#ffd700"
+            android:background="#228b22"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
 
 </LinearLayout>
