--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -24,7 +24,7 @@
             android:textSize="32sp"/>
 
         <Button
-            android:id="@+id/tutoriel"
+            android:id="@+id/nothing"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -32,8 +32,8 @@
             android:layout_centerVertical="true"
             android:background="#ffd700"
             android:textColor="#228b22"
-            android:text="@string/tutoriel"
-            android:textSize="28sp"/>
+            android:text="@string/nothing"
+            android:textSize="48sp"/>
 
     </LinearLayout>
 
