--- a/app/src/main/res/layout/activity_mode_endurance.xml
+++ b/app/src/main/res/layout/activity_mode_endurance.xml
@@ -2,12 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="zm.shakethatphone.ModesDeJeu.ModeEndurance"
     android:background="@drawable/gradient_background">
+
+    <ImageView
+        android:id="@+id/imageTutoEndurance"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/fond_tuto"
+        android:visibility="invisible"/>
+    <TextView
+        android:id="@+id/tutoEndurance"
+        android:text="@string/tutoEndurance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/textTuto"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/view_current_score"
