--- a/app/src/main/res/layout/activity_mode_sprint.xml
+++ b/app/src/main/res/layout/activity_mode_sprint.xml
@@ -2,18 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+
     tools:context="zm.shakethatphone.ModesDeJeu.ModeSprint"
     android:background="@drawable/gradient_background">
 
-    <TextView
-        android:id="@+id/tutoSprint"
-        android:text="Vous avez 3 secondes pour secouer votre télphone le plus vite possible !!"
+    <ImageView
+        android:id="@+id/imageTutoSprint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/fond_tuto"
+        android:visibility="invisible"/>
+    <TextView
+        android:id="@+id/tutoSprint"
+        android:text="@string/tutoSprint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/textTuto"
         android:visibility="invisible"/>
 
     <TextView
