--- a/app/src/main/res/layout/activity_resultat_partie.xml
+++ b/app/src/main/res/layout/activity_resultat_partie.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="zm.shakethatphone.ResultatPartie"
+    android:id="@+id/linearLayoutResultatPartie"
     android:orientation="vertical">
 
     <LinearLayout
@@ -62,6 +63,12 @@
             android:layout_gravity="center"
             android:gravity="left"
             android:textSize="26sp"/>
+
+        <!--<ImageView-->
+            <!--android:id="@+id/screenshots"-->
+            <!--android:layout_weight="50"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent" />-->
 
     </LinearLayout>
 
