--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -169,7 +169,7 @@
 
         <TextView
             android:id="@+id/partager"
-            android:text="@string/partager"
+            android:text="..."
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
