--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -23,7 +23,6 @@
 
         <TextView
             android:id="@+id/bestSprint"
-            android:text="@string/hello_world"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -52,7 +51,6 @@
 
         <TextView
             android:id="@+id/bestEndurance"
-            android:text="@string/hello_world"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -81,7 +79,6 @@
 
         <TextView
             android:id="@+id/bestReflexe"
-            android:text="@string/hello_world"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -110,7 +107,6 @@
 
         <TextView
             android:id="@+id/bestPuissance"
-            android:text="@string/hello_world"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -128,7 +124,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:text="Calories brulées"
+            android:text="@string/caloriesbrulees"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -139,7 +135,6 @@
 
         <TextView
             android:id="@+id/caloriesBrulees"
-            android:text="@string/hello_world"
             android:layout_weight="50"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
