--- a/app/src/main/res/layout/activity_resultat_partie.xml
+++ b/app/src/main/res/layout/activity_resultat_partie.xml
@@ -19,7 +19,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:textSize="36sp"
-        android:text="mode sprint"
         android:layout_gravity="center"
         android:gravity="center"/>
 
@@ -29,7 +28,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="16"
         android:layout_gravity="center"
         android:gravity="bottom"
         android:textSize="82sp"/>
@@ -48,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:text="MEILLEUR "
+            android:text="@string/meilleur"
             android:layout_gravity="center"
             android:gravity="right"
             android:textSize="26sp"/>
@@ -59,7 +57,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:text="30"
             android:layout_gravity="center"
             android:gravity="left"
             android:textSize="26sp"/>
@@ -84,7 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:text="Partager"
+            android:text="@string/partager"
             android:layout_gravity="center"
             android:gravity="center"
             android:textSize="20sp"/>
@@ -106,7 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:text="Rejouer"
+            android:text="@string/rejouer"
             android:layout_gravity="center"
             android:gravity="center"
             android:textSize="20sp"/>
